--- a/DreamSchedulerApplication/Views/Student/Index.cshtml
+++ b/DreamSchedulerApplication/Views/Student/Index.cshtml
@@ -24,8 +24,8 @@
             <br />
             <img src="~/Content/images/courselogo.png" alt="...">
             <div class="caption">
-                <h2>Browse Courses</h2>
-                <p><a href="@Url.Action("Courses", "Student")" class="btn btn-success" role="button">Button</a></p>
+                <h2>Browse Course Sequence</h2>
+                <p><a href="@Url.Action("CourseSequence", "Student")" class="btn btn-success" role="button">Button</a></p>
             </div>
         </div>
     </div>
