--- a/DreamSchedulerApplication/Views/AcademicRecord/Index.cshtml
+++ b/DreamSchedulerApplication/Views/AcademicRecord/Index.cshtml
@@ -10,6 +10,8 @@
 <p>Student Name:  @Html.DisplayFor(model => model.Student.FirstName) @Html.DisplayFor(model => model.Student.LastName)</p>
 <p>Student ID: @Html.DisplayFor(model => model.Student.StudentID)</p>
 <p>Student GPA: @Html.DisplayFor(model => model.Student.GPA)</p>
+<br />
+<p>Entry: @Html.DisplayFor(model => model.Student.Entry)</p>
 
 
 <table class="table">
