User constraints and code refactoring
-Adds a view for inputting user constraints and modifies the scheduling
algorithm to take them into account

-Refactors scheduler code and moves its logic from controller to model

--- a/DreamSchedulerApplication/Content/Site.css
+++ b/DreamSchedulerApplication/Content/Site.css
@@ -22,3 +22,11 @@ select,
 textarea {
     max-width: 280px;
 }
+
+table#container {
+    table-layout: fixed;
+}
+
+table#container td, th{
+    width: 120px;
+}
