--- a/DreamSchedulerApplication/Views/Shared/_NavbarPartial.cshtml
+++ b/DreamSchedulerApplication/Views/Shared/_NavbarPartial.cshtml
@@ -40,7 +40,7 @@
                             <li>@Html.ActionLink("Home", "Index", "Student")</li>
                             <li>@Html.ActionLink("Sequence", "CourseSequence", "Student")</li>
                             <li>@Html.ActionLink("Generate Full Sequence", "GenerateSequence", "SequenceGenerator")</li>
-                            <li>@Html.ActionLink("Generate Student Sequence", "GenerateCustomSequence", "SequenceGenerator")</li>
+                            <li>@Html.ActionLink("Generate Student Sequence", "Constraints", "SequenceGenerator")</li>
                             <li>@Html.ActionLink("AcademicRecord", "Index", "AcademicRecord")</li>
                         </ul>
                     }
