Bug fixes and validation
-Adds form validation for most properties
-Removes possibility of course dublication in academic record
-Removes GPA property
-Updating database now clears the existing one
-Adds proper semester display to all sequence views
-Links implemented functionality to GUI

--- a/DreamSchedulerApplication/Views/Shared/_NavbarPartial.cshtml
+++ b/DreamSchedulerApplication/Views/Shared/_NavbarPartial.cshtml
@@ -38,9 +38,7 @@
                     {
                         <ul class="nav navbar-nav">
                             <li>@Html.ActionLink("Home", "Index", "Student")</li>
-                            <li>@Html.ActionLink("Sequence", "CourseSequence", "Student")</li>
-                            <li>@Html.ActionLink("Generate Full Sequence", "GenerateSequence", "SequenceGenerator")</li>
-                            <li>@Html.ActionLink("Generate Student Sequence", "Constraints", "SequenceGenerator")</li>
+                            <li>@Html.ActionLink("Generate Default Sequence", "GenerateDefaultSequence", "SequenceGenerator")</li>
                             <li>@Html.ActionLink("AcademicRecord", "Index", "AcademicRecord")</li>
                         </ul>
                     }
