--- a/DreamSchedulerApplication/Views/Shared/_LoginPartial.cshtml
+++ b/DreamSchedulerApplication/Views/Shared/_LoginPartial.cshtml
@@ -22,8 +22,9 @@
             </b><b class="caret"></b>
         </a>
         <ul class="dropdown-menu text-center">
-            <li><a href="@Url.Action("Index", "Manage")">Manage Account</a></li>
-            <li><a href="#">action</a></li>
+            @if (HttpContext.Current.User.IsInRole("student")) {
+                <li><a href="@Url.Action("EditAccount", "Account")">Edit Account</a></li>
+            }
             <li class="divider"></li>
             <li class="text-center">
                 ﻿@if (Request.IsAuthenticated)
