Course details and header fixes
-Adds course details views
-Fixes some of page headers that were displaying placeholder text

--- a/DreamSchedulerApplication/Views/AcademicRecord/Index.cshtml
+++ b/DreamSchedulerApplication/Views/AcademicRecord/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "StudentRecord";
 }
 
-<h2 style="margin-bottom: 40px">StudentRecord</h2>
+<h2 style="margin-bottom: 40px">Academic Record</h2>
 
 
 <p>Student Name:  @Html.DisplayFor(model => model.Student.FirstName) @Html.DisplayFor(model => model.Student.LastName)</p>
