--- a/DreamSchedulerApplication/Views/Account/EditAccount.cshtml
+++ b/DreamSchedulerApplication/Views/Account/EditAccount.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "AccountEDIT";
 }
 
-<h2>Account EDIT Page</h2>
+<h2>Edit Account</h2>
 
 
 @using (Html.BeginForm("EditAccount", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
