--- a/DreamSchedulerApplication/Views/Student/CourseDetails.cshtml
+++ b/DreamSchedulerApplication/Views/Student/CourseDetails.cshtml
@@ -4,5 +4,71 @@
     ViewBag.Title = "Course Details";
 }
 
-<h2 style="margin-bottom: 40px">Course Details</h2>
+<h2 style="margin-bottom: 40px">@ViewBag.Title</h2>
 
+<h4>Course Code: @Html.DisplayFor(model => model.Course.Code)</h4>
+<p>Title: @Html.DisplayFor(model => model.Course.Title)</p>
+<p>Credits: @Html.DisplayFor(model => model.Course.Credits)</p>
+
+@foreach (var item in Model.sections)
+{
+    <div class="Section" style="margin-top: 50px">
+
+    <h4>Section: @Html.DisplayFor(modelItem => item.Lecture.Section)</h4>
+    
+    <p>Professor: @Html.DisplayFor(modelItem => item.Lecture.Professor)</p>
+    <p>
+        @{
+            var lectureDays = String.Join(", ", item.Lecture.Days);
+            @Html.DisplayFor(modelItem => lectureDays);
+        }
+        (@Html.DisplayFor(modelItem => item.Lecture.StartTime)-@Html.DisplayFor(modelItem => item.Lecture.EndTime))   
+        @Html.DisplayFor(modelItem => item.Lecture.Building)
+        @Html.DisplayFor(modelItem => item.Lecture.Room)
+    </p>
+
+    @if (item.Tutorials.Count() != 0)
+    {
+        <p><strong>Tutorials:</strong></p>
+    }
+    <div style="margin-left: 15px;">
+        @foreach (var tutorial in item.Tutorials)
+        {
+            <p>
+                Section: <strong>@Html.DisplayFor(modelItem => tutorial.Section)</strong> - 
+           
+                @{
+                    var tutorialDays = String.Join(", ", tutorial.Days);
+                    @Html.DisplayFor(modelItem => tutorialDays);
+                }
+                (@Html.DisplayFor(modelItem => tutorial.StartTime)-@Html.DisplayFor(modelItem => tutorial.EndTime))
+                @Html.DisplayFor(modelItem => tutorial.Building)
+                @Html.DisplayFor(modelItem => tutorial.Room)
+            </p>
+        }
+    </div>
+
+   @if(item.Labs.Count() != 0)
+   { 
+        <p><strong>Labs:</strong></p>
+   }
+   <div style="margin-left: 15px;">
+        @foreach (var lab in item.Labs)
+        {
+            <p>
+                Section: <strong>@Html.DisplayFor(modelItem => lab.Section)</strong> -
+
+                @{
+                    var labDays = String.Join(", ", lab.Days);
+                    @Html.DisplayFor(modelItem => labDays);
+                }
+                (@Html.DisplayFor(modelItem => lab.StartTime)-@Html.DisplayFor(modelItem => lab.EndTime))
+                @Html.DisplayFor(modelItem => lab.Building)
+                @Html.DisplayFor(modelItem => lab.Room)
+            </p>
+        }
+    </div>
+
+    
+    </div>
+}
