--- a/DreamSchedulerApplication/Views/Student/Index.cshtml
+++ b/DreamSchedulerApplication/Views/Student/Index.cshtml
@@ -25,7 +25,7 @@
             <img src="~/Content/images/courselogo.png" alt="...">
             <div class="caption">
                 <h2>Browse Course Sequence</h2>
-                <p><a href="@Url.Action("ViewDefaultSequence", "SequenceGenerator")" class="btn btn-success" role="button">Button</a></p>
+                <p><a href="@Url.Action("GenerateDefaultSequence", "SequenceGenerator")" class="btn btn-success" role="button">Button</a></p>
             </div>
         </div>
     </div>
