Semester display and CSS fixes
-Adds proper semester name generation to constraints view
-Fixes mispositioning of some elements
-Edits some HTML elements and styles

--- a/DreamSchedulerApplication/Content/Site.css
+++ b/DreamSchedulerApplication/Content/Site.css
@@ -28,5 +28,9 @@ table#container {
 }
 
 table#container td, th{
-    width: 120px;
+    width: 140px;
+}
+
+table#container td.listElement, th.listElement {
+    width: 0;
 }
