--- a/DreamSchedulerApplication/Views/Shared/EditorTemplates/Constraint.cshtml
+++ b/DreamSchedulerApplication/Views/Shared/EditorTemplates/Constraint.cshtml
@@ -3,9 +3,10 @@
 
     <tr>
         <td class='listElement'>
-            @Html.TextBoxFor(x => x.Semester, new { @readonly="readonly" })
+            @Html.HiddenFor(x => x.Semester, new { @readonly="readonly" })
         </td> 
+        <td class='semesterName'></td>
         <td>
-            @Html.TextBoxFor(x => x.NumberOfCourses)
+            @Html.EditorFor(x => x.NumberOfCourses, new { htmlAttributes = new { @class = "form-control" } })
         </td>
     </tr>
