--- a/DreamSchedulerApplication/Views/Home/Index.cshtml
+++ b/DreamSchedulerApplication/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="jumbotron">
-    <h1>Welcome to DreamScheduler</h1>
+    <h1 class="text-center">Welcome to DreamScheduler</h1>
 
 </div>
 
@@ -38,8 +38,8 @@
 <br />
 <!--second row-->
 <div class="row">
-    <div class="text-center">
-        <h2>Information about</h2>
+    <div>
+        <h2 class="text-center">Information about</h2>
     </div>
 </div>
 
@@ -84,11 +84,8 @@
 
 
 <div class="row">
-    <div class="col-md-4"></div>
-    <div class="col-md-4">
-
-        <input type="button" class="btn btn-primary btn-lg btn-block" value="Join" onclick="location.href='@Url.Action("Login", "Account" )'" />
-    </div>
-    <div class="col-md-4"></div>
+    <p class="text-center">
+        <input type="button" class="btn btn-primary btn-lg" value="Join DreamScheduler" onclick="location.href='@Url.Action("Register", "Account" )'" />
+    </p>
 </div>
 
