--- a/DreamSchedulerApplication/Views/Shared/_LoginPartial.cshtml
+++ b/DreamSchedulerApplication/Views/Shared/_LoginPartial.cshtml
@@ -24,6 +24,7 @@
         <ul class="dropdown-menu text-center">
             @if (HttpContext.Current.User.IsInRole("student")) {
                 <li><a href="@Url.Action("EditAccount", "Account")">Edit Account</a></li>
+                <li><a href="@Url.Action("ChangePassword", "Account")">Change password</a></li>
                 <li class="divider"></li>
             }
             <li class="text-center">
